feat: add sample env

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FF6C37" />
-    <meta name="description" content="A Postman-like API testing tool" />
-    <title>Postman Clone - API Testing Tool</title>
+    <meta name="description" content="A feature-rich API testing tool" />
+    <title>Peigen - API Testing Tool</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
